src/objects/Portal_Dashboard_Settings__mdt.object
<CustomObject>
    <description>To capture all the configuration settings for portal dashboards</description>
    <fields>
        <fullName>Dashboard_Type__c</fullName>
        <label>Dashboard Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Professional</fullName>
                    <default>true</default>
                    <label>Professional</label>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Draft_Applications__c</fullName>
        <label>Draft Applications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Draft_Applications_statuses__c</fullName>
        <label>Draft Applications statuses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Statuses__c</fullName>
        <label>License Statuses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Types__c</fullName>
        <label>License Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pending_Applications__c</fullName>
        <label>Pending Applications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pending_Applications_statuses__c</fullName>
        <label>Pending Applications statuses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Portal Dashboard Settings</label>
    <pluralLabel>Portal Dashboard Settings</pluralLabel>
</CustomObject>